--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "1.0.6",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.1",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
+    "@tremor/react": "^2.9.1",
     "@trpc/client": "^10.26.0",
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
